@@ -175,9 +175,8 @@ bool SkCodec::conversionSupported(const SkImageInfo& dst, bool srcIsOpaque, bool
     switch (dst.colorType()) {
         case kRGBA_8888_SkColorType:
         case kBGRA_8888_SkColorType:
-            return true;
         case kRGBA_F16_SkColorType:
-            return dst.colorSpace();
+            return true;
         case kRGB_565_SkColorType:
             return srcIsOpaque;
         case kGray_8_SkColorType:
@@ -331,13 +330,8 @@ SkCodec::Result SkCodec::handleFrameIndex(const SkImageInfo& info, void* pixels,
         ? kSuccess : kInvalidConversion;
 }
 
-SkCodec::Result SkCodec::getPixels(const SkImageInfo& dstInfo, void* pixels, size_t rowBytes,
+SkCodec::Result SkCodec::getPixels(const SkImageInfo& info, void* pixels, size_t rowBytes,
                                    const Options* options) {
-    SkImageInfo info = dstInfo;
-    if (!info.colorSpace()) {
-        info = info.makeColorSpace(SkColorSpace::MakeSRGB());
-    }
-
     if (kUnknown_SkColorType == info.colorType()) {
         return kInvalidConversion;
     }
@@ -406,14 +400,10 @@ SkCodec::Result SkCodec::getPixels(const SkImageInfo& dstInfo, void* pixels, siz
     return result;
 }
 
-SkCodec::Result SkCodec::startIncrementalDecode(const SkImageInfo& dstInfo, void* pixels,
+SkCodec::Result SkCodec::startIncrementalDecode(const SkImageInfo& info, void* pixels,
         size_t rowBytes, const SkCodec::Options* options) {
     fStartedIncrementalDecode = false;
 
-    SkImageInfo info = dstInfo;
-    if (!info.colorSpace()) {
-        info = info.makeColorSpace(SkColorSpace::MakeSRGB());
-    }
     if (kUnknown_SkColorType == info.colorType()) {
         return kInvalidConversion;
     }
@@ -479,15 +469,10 @@ SkCodec::Result SkCodec::startIncrementalDecode(const SkImageInfo& dstInfo, void
 }
 
 
-SkCodec::Result SkCodec::startScanlineDecode(const SkImageInfo& dstInfo,
+SkCodec::Result SkCodec::startScanlineDecode(const SkImageInfo& info,
         const SkCodec::Options* options) {
     // Reset fCurrScanline in case of failure.
     fCurrScanline = -1;
-
-    SkImageInfo info = dstInfo;
-    if (!info.colorSpace()) {
-        info = info.makeColorSpace(SkColorSpace::MakeSRGB());
-    }
 
     if (!this->rewindIfNeeded()) {
         return kCouldNotRewind;
@@ -649,11 +634,18 @@ bool SkCodec::initializeColorXform(const SkImageInfo& dstInfo, SkEncodedInfo::Al
                                    bool srcIsOpaque) {
     fXformTime = kNo_XformTime;
     bool needsColorXform = false;
-    if (this->usesColorXform() && dstInfo.colorSpace()) {
-        dstInfo.colorSpace()->toProfile(&fDstProfile);
+    if (this->usesColorXform()) {
         if (kRGBA_F16_SkColorType == dstInfo.colorType()) {
             needsColorXform = true;
-        } else {
+            if (dstInfo.colorSpace()) {
+                dstInfo.colorSpace()->toProfile(&fDstProfile);
+            } else {
+                // Use the srcProfile to avoid conversion.
+                const auto* srcProfile = fEncodedInfo.profile();
+                fDstProfile = srcProfile ? *srcProfile : *skcms_sRGB_profile();
+            }
+        } else if (dstInfo.colorSpace()) {
+            dstInfo.colorSpace()->toProfile(&fDstProfile);
             const auto* srcProfile = fEncodedInfo.profile();
             if (!srcProfile) {
                 srcProfile = skcms_sRGB_profile();
